# galaxeye_assessment_sar_to_eo_translation

./: README.md  config.yaml  evaluate.py  pyproject.toml  requirements.txt  torch2onnx.py  train.py
datasets/: combine_A_and_B.py  split.py
src/: metric.py  plot.py
utils/: utils.py
