[project]
name = "sar2optical"
version = "1.0.0"
description = "Pix2Pix CGAN implementation for translating Synthetic Aperture Radar (SAR) images to optical images."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pyyaml>=6.0.3",
    "torch>=2.9.1",
    "torchvision==0.24.1",
]

[dependency-groups]
data = [
    "kaggle>=2.0.0",
]
export = [
    "onnx>=1.21.0",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.2",
]
train = [
    "comet-ml>=3.57.3",
    "scipy>=1.17.1",
    "tqdm>=4.66.5",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.9.1",
  "torchvision==0.24.1",
]
cu128 = [
  "torch>=2.9.1",
  "torchvision==0.24.1",
]
cu130 = [
  "torch>=2.9.1",
  "torchvision==0.24.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
    { extra = "cu130" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
